--- a/recipe-page-main/styles/style.scss
+++ b/recipe-page-main/styles/style.scss
@@ -160,21 +160,22 @@ header {
 	&-table {
 		margin-top: 1rem;
 		width: 100%;
-
-		hr {
-			color: var(--Light-Grey);
-			opacity: 0.4;
-		}
 	}
 
 	&-class {
 		height: 50px;
-		width: 70%;
-		padding: 0 2rem;
+		padding-left: 2rem;
+		padding-right: 35%;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		gap: 50%;
+		text-align: start;
+		border-bottom: 1px solid var(--Light-Grey);
+	}
+	
+	&-value{
+		font-weight: bold;
+		color: var(--Nutmeg);
 	}
 }
 
@@ -190,7 +191,7 @@ header {
 	}
 }
 
-@media (max-width: 450px) {
+@media (max-width: 475px) {
 	h2 {
 		font-size: 1.5rem;
 	}
@@ -208,9 +209,7 @@ header {
 
 	.nutrition {
 		&-class {
-			width: 90%;
-			padding: 0 1rem;
-			gap: 30%;
+			padding-right: 10%;
 		}
 	}
 }
