--- a/blog-preview-card-main/style/style.scss
+++ b/blog-preview-card-main/style/style.scss
@@ -22,16 +22,28 @@
 	}
 }
 
+html,
 body {
+	height: 100%;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	background-color: var(--Yellow);
 	width: 100vw;
 	padding: 20px 10px;
 	font-family: 'Figtree', sans-serif;
 }
 
+main {
+	flex: 1;
+}
+
 .card {
 	max-width: 350px;
-	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -41,14 +53,14 @@ body {
 	box-shadow: 9px 9px rgba($color: #000000, $alpha: 1);
 	border: 1px solid var(--Black);
 
-	.hero {
+	&-header {
 		img {
 			border-radius: 9px;
 			width: 100%;
 		}
 	}
 
-	.meta {
+	&-body {
 		h2 {
 			margin: 1rem 0;
 
@@ -58,7 +70,7 @@ body {
 			}
 		}
 
-		.tag {
+		&-tag {
 			background-color: var(--Yellow);
 			width: fit-content;
 			margin-top: 1rem;
@@ -68,27 +80,25 @@ body {
 			font-weight: 500;
 		}
 
-		.date {
+		&-date {
 			font-weight: 500;
 			margin-top: 0.5rem;
 		}
+	}
+	&-footer {
+		margin-top: 1.25rem;
+		display: flex;
+		align-items: center;
+		gap: 1rem;
+		color: var(--Black);
 
-		.footer {
-			margin-top: 1.25rem;
-			display: flex;
-			align-items: center;
-			gap: 1rem;
-			color: var(--Black);
-
-			img {
-				width: 42px;
-			}
+		img {
+			width: 42px;
 		}
 	}
 }
 
 .attribution {
-	margin-top: 3rem;
 	font-size: 16px;
 	text-align: center;
 
