--- a/interactive-rating-component-main/styles/style.scss
+++ b/interactive-rating-component-main/styles/style.scss
@@ -37,6 +37,7 @@ body {
 	border-radius: 15px;
 
 	&-logo {
+		margin-bottom: 2rem;
 		width: 40px;
 		height: 40px;
 		border-radius: 50%;
@@ -48,8 +49,8 @@ body {
 			-2px -2px 5px rgba(0, 0, 0, 0.2);
 	}
 
-	h2 {
-		margin: 1rem 0;
+	h1 {
+		margin-bottom: 1rem;
 	}
 
 	p {
