--- a/nft-preview-card-component-main/styles/style.css
+++ b/nft-preview-card-component-main/styles/style.css
@@ -19,10 +19,14 @@ body {
   font-size: 16px;
   padding: 10px;
   background-color: var(--Main-dark-blue);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
-  margin: 0 auto;
   max-width: 350px;
   padding: 20px;
   background-color: var(--Card-dark-blue);
@@ -105,6 +109,7 @@ body {
 }
 .card-footer p {
   color: var(--Soft-blue);
+  white-space: nowrap;
 }
 .card-footer p a {
   text-decoration: none;
