--- a/nft-preview-card-component-main/styles/style.scss
+++ b/nft-preview-card-component-main/styles/style.scss
@@ -24,10 +24,14 @@ body {
 	font-size: 16px;
 	padding: 10px;
 	background-color: var(--Main-dark-blue);
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .card {
-	margin: 0 auto;
 	max-width: 350px;
 	padding: 20px;
 	background-color: var(--Card-dark-blue);
@@ -121,6 +125,7 @@ body {
 		}
 		p {
 			color: var(--Soft-blue);
+			white-space: nowrap;
 			a {
 				text-decoration: none;
 				color: inherit;
