--- a/results-summary-component-main/styles/style.css
+++ b/results-summary-component-main/styles/style.css
@@ -23,12 +23,29 @@
   src: url("../assets/fonts/HankenGrotesk-VariableFont_wght.ttf");
 }
 
+.flex {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
 h2 {
-  font-size: 3.5rem;
+  font-size: 2.2rem;
 }
 
 h3 {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
 }
 
 body {
@@ -38,78 +55,79 @@ body {
   padding: 50px 10px;
 }
 
-main {
-  margin: 0 auto;
-  max-width: 600px;
-}
-
-.result-container {
+.card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 100%;
+  width: 737px;
+  height: 512px;
+  box-shadow: 10px 10px 20px 12px hsla(221, 100%, 96%, 0.6);
 }
-.result-container--left {
-  background-color: var(--Light-royal-blue);
-  padding: 10px 20px;
-  height: 100%;
-  border-radius: 9px;
+.card-left {
+  background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  padding: 10px 56px;
+  border-radius: 27px;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-self: center;
   gap: 1rem;
   color: var(--White);
 }
-.result-container--left .result-percentage {
-  margin: 0 auto;
+.card-left h1 {
+  color: var(--White);
+}
+.card-left h3 {
+  margin-bottom: 2rem;
+}
+.card-left .circle {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-self: center;
-  width: 180px;
-  height: 180px;
-  background-color: var(--Cobalt-blue);
+  width: 200px;
+  height: 200px;
+  background-image: linear-gradient(180deg, hsla(256, 72%, 46%, 0.7), hsla(241, 72%, 46%, 0));
   border-radius: 50%;
-  box-shadow: inset 2px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.2);
 }
-.result-container--right {
-  height: 100%;
-  border-radius: 0px 9px 9px 0px;
+.card-right {
+  border-radius: 0px 27px 27px 0px;
   padding: 32px 16px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
-.result-container--right .summary-list {
+.card-right h3 {
+  color: var(--Dark-gray-blue);
+  font-weight: 600;
+}
+.card-right .stats-list {
   margin-top: 1rem;
 }
-.result-container--right .summary-list .result-summary {
+.card-right .stats-list .stat-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 15px 20px;
   border-radius: 6px;
   margin: 1rem 0;
 }
-.result-container--right .summary-list .result-summary .title {
+.card-right .stats-list .stat-wrapper .stat-title {
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
-.result-container--right .summary-list .result-summary .score {
+.card-right .stats-list .stat-wrapper .stat-score {
   color: var(--Dark-gray-blue);
 }
-.result-container--right button {
+.card-right button {
+  margin-top: 2rem;
   width: 100%;
+  padding: 15px;
   font-family: "Hanken Grotesk";
   font-size: 1.1rem;
   font-weight: bold;
   color: var(--White);
-  background-color: var(--Light-royal-blue);
-  padding: 10px 15px;
+  background-color: var(--Dark-gray-blue);
   border-radius: 25px;
   border: none;
+}
+.card-right button:hover {
   cursor: pointer;
+  background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
 }
 
 .reaction {
@@ -133,8 +151,8 @@ main {
 }
 
 .attribution {
-  margin-top: 2rem;
-  font-size: 14px;
+  margin-top: 3rem;
+  font-size: 16px;
   text-align: center;
 }
 .attribution a {
@@ -144,9 +162,17 @@ main {
 }
 
 @media (max-width: 600px) {
-  .result-container {
+  body {
+    padding: 10px;
+  }
+  .card {
     display: grid;
     grid-template-columns: 1fr;
     height: 100%;
+    width: 375px;
+  }
+  .card-left {
+    border-radius: 0 0 5px 5px;
+    padding: 32px 12px;
   }
 }
