--- a/social-proof-section-master/styles/style.css
+++ b/social-proof-section-master/styles/style.css
@@ -166,6 +166,11 @@ main {
   }
 }
 @media (max-width: 528px) {
+  body {
+    background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
+    background-repeat: no-repeat, no-repeat;
+    background-position: left top, right bottom;
+  }
   h1 {
     font-size: 3rem;
   }
